--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ black = "^24.4.0"
 isort = "^5.13.2"
 jupyterlab-vim = "^4.1.3"
 numpy = "^1.26.4"
+matplotlib = "^3.8.4"
+scipy = "^1.13.0"
 
 
 [build-system]
