--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ jupyterlab-vim = "^4.1.3"
 numpy = "^1.26.4"
 matplotlib = "^3.8.4"
 scipy = "^1.13.0"
+statsmodels = "^0.14.2"
 
 
 [build-system]
