--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ scipy = "^1.13.0"
 statsmodels = "^0.14.2"
 scikit-learn = "^1.5.1"
 tqdm = "^4.67.1"
+scikit-optimize = "^0.10.2"
 
 
 [build-system]
