--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ statsmodels = "^0.14.2"
 scikit-learn = "^1.5.1"
 tqdm = "^4.67.1"
 scikit-optimize = "^0.10.2"
+optuna = "^4.2.0"
 
 
 [build-system]
